platform/openshift/isbn-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isbn-service
  namespace: antonio-dimarino-dev
spec:
  replicas: 1
  selector:
    matchLabels: { app: isbn-service }
  template:
    metadata:
      labels: { app: isbn-service }
    spec:
      containers:
      - name: isbn-service
        image: image-registry.openshift-image-registry.svc:5000/antonio-dimarino-dev/isbn-service:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet: { path: "/q/health/ready", port: 8080 }
          initialDelaySeconds: 5
          timeoutSeconds: 3
        livenessProbe:
          httpGet: { path: "/q/health/live", port: 8080 }
          initialDelaySeconds: 10
          timeoutSeconds: 3
