platform/openshift/isbn-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isbn-service
  namespace: <nome_progetto_openshift>
spec:
  selector: { app: isbn-service }
  ports:
  - name: http
    port: 80
    targetPort: 8080
