platform/openshift/isbn-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: isbn-service
  namespace: <nome_progetto_openshift>
spec:
  to: { kind: Service, name: isbn-service }
  port:
    targetPort: http
